@@ -1,3 +1,8 @@
+2011-11-16  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* src/gpasswd.c: Change of group password enforces gshadow
+	password. Set /etc/group password to "x".
+
 2011-11-16  Peter Vrabec  <pvrabec@redhat.com>
 
 	* NEWS, src/userdel.c, man/userdel.8.xml: Add option -Z/--selinux-user.
